src/objects/Feedback_Request__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedback Requests</relationshipLabel>
        <relationshipName>Feedback_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Feedback Requests</relationshipLabel>
        <relationshipName>Feedback_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property10_Name__c</fullName>
        <label>Property10 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property10</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Feedback Requests (Property10)</relationshipLabel>
        <relationshipName>Feedback_Requests9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property1_Name__c</fullName>
        <label>Property1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property1</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Feedback Requests</relationshipLabel>
        <relationshipName>Feedback_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property2_Name__c</fullName>
        <label>Property2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property2</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Feedback Requests (Property2)</relationshipLabel>
        <relationshipName>Feedback_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing10_Id__c</fullName>
        <label>Viewing10 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing1_Id__c</fullName>
        <label>Viewing1 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing2_Id__c</fullName>
        <label>Viewing2 Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing_Conducted_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Viewing Conducted by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feedback_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Viewing_Conducted_by__c</fullName>
        <label>Viewing Conducted by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feedback Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feedback Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>